--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "tsc": "tsc",
-    "postinstall": "npm run tsc"
+    "postinstall": "npm run tsc",
+    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts"
   },
-  "author": "",
+  "type": "module",
+  "author": "reynadess",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.1"
   },
-  "type": "module",
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
